--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2022-04-08 14:01:05
+ * @LastEditTime: 2022-04-12 15:32:13
+ * @LastEditors: your name
+ * @Description: 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+ * @FilePath: /yeb/public/index.html
+-->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -7,7 +15,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style="margin : 0px;padding:0px">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
